--- a/art.html
+++ b/art.html
@@ -19,6 +19,12 @@
         </nav>
 
         <main>
+            <div class="photos" id="art-photos" style="margin-top: 5%;">
+                <img src="images/art1.png">
+                <img src="images/art2.png">
+                <img src="images/art3.png">
+                <img src="images/art4.png">
+            </div>
         </main>
     </body>
 </html>
