--- a/science.html
+++ b/science.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body id="art">
+    <body id="science">
         <nav>
         <li>
             <ul><a href="index.html">Home</a></ul>
