--- a/art.html
+++ b/art.html
@@ -20,10 +20,10 @@
 
         <main>
             <div class="photos" id="art-photos" style="margin-top: 5%;">
-                <img src="images/art1.png">
-                <img src="images/art2.png">
-                <img src="images/art3.png">
-                <img src="images/art4.png">
+                <img src="Images/art1.png">
+                <img src="Images/art2.png">
+                <img src="Images/art3.png">
+                <img src="Images/art4.png">
             </div>
         </main>
     </body>
