--- a/theatre.html
+++ b/theatre.html
@@ -22,19 +22,19 @@
         <p></p>
         <h2>2023</h2>
         <div class="photos">
-            <img src="images/sister1.png">
-            <img src="images/sister2.png">
-            <img src="images/r&j1.png">
-            <img src="images/r&j2.png">
+            <img src="Images/sister1.png">
+            <img src="Images/sister2.png">
+            <img src="Images/r&j1.png">
+            <img src="Images/r&j2.png">
         </div>
         <hr>
         <h2>2024</h2>
         <div class="photos">
-            <img src="images/anastasia1.png">
-            <img src="images/anastasia2.png">
-            <img src="images/anastasia3.png">
-            <img src="images/anastasia4.png">
-            <img src="images/anastasia5.png">
+            <img src="Images/anastasia1.png">
+            <img src="Images/anastasia2.png">
+            <img src="Images/anastasia3.png">
+            <img src="Images/anastasia4.png">
+            <img src="Images/anastasia5.png">
         </div>
         <img src="images/anastasiaphoto.png" width="100%" id="anaphoto">
         </main>
