--- a/theatre.html
+++ b/theatre.html
@@ -36,7 +36,7 @@
             <img src="Images/anastasia4.png">
             <img src="Images/anastasia5.png">
         </div>
-        <img src="images/anastasiaphoto.png" width="100%" id="anaphoto">
+        <img src="Images/anastasiaphoto.png" width="100%" id="anaphoto">
         </main>
     </body>
 </html>
